force-app/main/default/objects/LVGO_Automation_Switch__c/LVGO_Automation_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LVGO Automation Switch</label>
</CustomObject>