force-app/main/default/objects/LVGO_Automation_Switch__c/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch to Control execution of  Flows</description>
    <inlineHelpText>Turning this flag on runs all the LVGO Flows</inlineHelpText>
    <label>Enable Flows</label>
    <type>Checkbox</type>
</CustomField>