force-app/main/default/objects/LVGO_Automation_Switch__c/fields/ProcessBuilders__c.field-meta.xml
<CustomField>
    <fullName>ProcessBuilders__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch to Control execution of  Process Builders</description>
    <inlineHelpText>Turning this flag on runs all the LVGO Process Builders</inlineHelpText>
    <label>Enable Process Builders</label>
    <type>Checkbox</type>
</CustomField>