force-app/main/default/objects/LVGO_Automation_Switch__c/fields/Triggers__c.field-meta.xml
<CustomField>
    <fullName>Triggers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch to Control execution of  Triggers</description>
    <inlineHelpText>Turning this flag on runs all the LVGO Triggers</inlineHelpText>
    <label>Enable Triggers</label>
    <type>Checkbox</type>
</CustomField>