force-app/main/default/objects/LVGO_Automation_Switch__c/fields/Validations__c.field-meta.xml
<CustomField>
    <fullName>Validations__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch to control execution of  Validations</description>
    <inlineHelpText>Turning this flag on runs all the LVGO validations</inlineHelpText>
    <label>Enable Validations</label>
    <type>Checkbox</type>
</CustomField>