force-app/main/default/objects/LVGO_Automation_Switch__c/fields/Workflows__c.field-meta.xml
<CustomField>
    <fullName>Workflows__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch to Control execution of  Worklfow Rules</description>
    <inlineHelpText>Turning this flag on runs all the LVGO Worklfows</inlineHelpText>
    <label>Enable Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>